# chm

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  README  TestHelpers.cmake  TestSettings.cmake  ThirdParties.cmake
auto_updater/: CMakeLists.txt  main.cpp
common/: named_properties.hpp  polygon_ptree_helpers.hpp  ptree_helpers.hpp
configuration_files/: CMakeLists.txt  plan.info
mail_notifier/: CMakeLists.txt  mail_notifier.cpp  mail_notifier.h
mail_notifier/tests/: CMakeLists.txt  mail_notifier_tests.cpp  tests.cpp
main/: CMakeLists.txt  main.cpp
math/: fft.hpp
math/tests/: CMakeLists.txt  fft_tests.cpp
owfs_reader/: owfs_reader.hpp
owfs_reader/tests/: CMakeLists.txt  owfs_reader_tests.cpp  tests.cpp
page_builder/: js_image.hpp  js_polygon.hpp  js_simple_objects.hpp  js_text.hpp  page.hpp
page_builder/tests/: CMakeLists.txt  page_builder_tests.cpp  tests.cpp
plan_reader/: plan_reader.hpp
plan_reader/tests/: CMakeLists.txt  plan_reader_tests.cpp
power_supply_monitor/: CMakeLists.txt  power_state_alarmer.h  power_state_polygon_updater.hpp  power_supply_monitor.h
power_supply_monitor/tests/: CMakeLists.txt  power_supply_tests.cpp  tests.cpp
third_parties/: CMakeLists.txt  chm.conf  chm_auto_updater.conf  chm_watchdog.conf  hamachi.pl  hamachi_net.conf  internet_available.conf  test_page.htm  wvdial.conf
version/: CMakeLists.txt
version_polygon_updater/: version_polygon_updater.hpp
watchdog/: CMakeLists.txt  main.cpp
